--- a/humanitarian.html
+++ b/humanitarian.html
@@ -103,7 +103,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 <body>
 
 <header>
-    <img src="https://cdn.pixabay.com/photo/2025/10/15/04/31/mahonia-9895458_640.jpg" class="logo">
+    <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1763476964/Screenshot_73_e5hyu9.png" class="logo">
     <h1 class="page-title">Humanitarian Aid</h1>
     <div class="empty"></div>
 </header>
@@ -114,7 +114,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
         <h2>Rapid Crisis Response</h2>
         <p>We deliver timely, compassionate assistance to individuals and families affected by disasters, conflicts, and hardship. Our programs provide lifesaving support including food, clean water, shelter, hygiene supplies, and inclusive support for people with disabilities and drug abuse recovery programs.</p>
     </div>
-    <img src="https://cdn.pixabay.com/photo/2025/10/15/04/31/mahonia-9895458_640.jpg" class="shape-round">
+    <img src="https://images.pexels.com/photos/8042458/pexels-photo-8042458.jpeg" class="shape-round">
 </section>
 
 <!-- 2. Food & Nutrition Support -->
@@ -131,12 +131,12 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
             <li><strong>Mombasa:</strong> Likoni, Kisauni</li>
         </ul>
     </div>
-    <img src="https://cdn.pixabay.com/photo/2015/11/23/03/36/medical-emergency-1057706_1280.jpg" class="shape-rounded">
+    <img src="https://images.pexels.com/photos/6590920/pexels-photo-6590920.jpeg" class="shape-rounded">
 </section>
 
 <!-- 3. Shelter & Safety -->
 <section class="section center-section">
-    <img src="https://cdn.pixabay.com/photo/2020/03/03/04/52/pill-4897529_640.jpg" class="shape-diagonal">
+    <img src="https://images.pexels.com/photos/6646902/pexels-photo-6646902.jpeg" class="shape-diagonal">
     <div class="text">
         <h2>Safe Shelter & Housing</h2>
         <p>Temporary shelters, tents, and reinforced housing are provided to protect families. Programs also cater to disability-inclusive shelters and safe spaces for youth recovering from drug abuse.</p>
@@ -152,7 +152,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 
 <!-- 4. Water & Sanitation -->
 <section class="section">
-    <img src="https://cdn.pixabay.com/photo/2016/11/14/03/16/book-1822474_640.jpg" class="shape-hexagon">
+    <img src="https://images.pexels.com/photos/6646909/pexels-photo-6646909.jpeg" class="shape-hexagon">
     <div class="text">
         <h2>Clean Water & Hygiene</h2>
         <p>We ensure access to safe water and hygiene facilities, with special attention to accessibility for persons with disabilities.</p>
