--- a/index.html
+++ b/index.html
@@ -1609,7 +1609,7 @@ footer.site-footer{
 
       <!-- Instagram -->
       <div style="text-align:center;">
-        <a href="#" target="_blank">
+        <a href="" target="_blank">
           <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" width="55">
         </a>
         <p style="font-size:13px;color:#333;margin-top:10px;">Swiss Aid Connect<br>Foundation</p>
@@ -1617,7 +1617,7 @@ footer.site-footer{
 
       <!-- X / Twitter -->
       <div style="text-align:center;">
-        <a href="#" target="_blank">
+        <a href="https://x.com/swissaidconnect" target="_blank">
           <img src="https://cdn-icons-png.flaticon.com/512/5968/5968958.png" width="55">
         </a>
         <p style="font-size:13px;color:#333;margin-top:10px;">Swiss Aid Connect<br>Foundation</p>
@@ -1625,7 +1625,7 @@ footer.site-footer{
 
       <!-- LinkedIn -->
       <div style="text-align:center%;">
-        <a href="#" target="_blank">
+        <a href="https://www.linkedin.com/in/swissaid-humanitarian-884025395?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
           <img src="https://cdn-icons-png.flaticon.com/512/3536/3536505.png" width="55">
         </a>
         <p style="font-size:13px;color:#333;margin-top:10px;">Swiss Aid Connect<br>Foundation</p>
@@ -1633,7 +1633,7 @@ footer.site-footer{
 
       <!-- YouTube -->
       <div style="text-align:center;">
-        <a href="#" target="_blank">
+        <a href="https://www.youtube.com/@swissaidconnectfoundation" target="_blank">
           <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" width="55">
         </a>
         <p style="font-size:13px;color:#333;margin-top:10px;">Swiss Aid Connect<br>Foundation</p>
