--- a/index.html
+++ b/index.html
@@ -1516,7 +1516,7 @@ footer.site-footer{
     </div>
 
     <div class="serve-image">
-      <img src="https://cdn.pixabay.com/photo/2015/11/23/03/36/medical-emergency-1057706_1280.jpg" alt="Serving communities">
+      <img src="https://images.pexels.com/photos/35250405/pexels-photo-35250405/free-photo-of-children-holding-cups-waiting-in-line-outdoors.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Serving communities">
     </div>
   </div>
 </section>
@@ -1558,7 +1558,7 @@ footer.site-footer{
 
       <!-- Card 2 -->
       <div style="background:#fff;border-radius:6px;overflow:hidden;display:flex;flex-direction:column;">
-        <img src="https://cdn.pixabay.com/photo/2016/11/14/03/16/book-1822474_640.jpg" alt="" style="width:100%;display:block;">
+        <img src="https://cdn.pixabay.com/photo/2018/02/07/18/30/group-3137670_960_720.jpg" alt="" style="width:100%;display:block;">
         <a href="#" class="join-btn-blue" style="
           display:block;
           padding:20px;
