--- a/index8.html
+++ b/index8.html
@@ -1353,7 +1353,8 @@ footer.site-footer{
 <body>
 <!-- Top Utility Nav -->
 <div class="top-nav">
-  
+   <a href="#" data-key="join-nav">Portal</a>
+ 
   
   <div class="lang-dropdown">
     <a href="#" id="langToggle" data-lang="en">EN ▾</a>
@@ -1363,10 +1364,11 @@ footer.site-footer{
         <a href="#" data-lang-select="fr">French</a>
         <a href="#" data-lang-select="de">German</a>
         <a href="#" data-lang-select="es">Spanish</a>
+       <a href="#" data-mobile-lang="it">Español</a>
         <a href="#" data-lang-select="sw">Swahili</a>
     </div>
 </div>
- <a href="#" data-key="join-nav">Portal</a>
+
  
 
   
@@ -2605,13 +2607,13 @@ const translations = {
         'footer-copyright': 'Swiss Aid Connect Foundation • Tutti i diritti riservati.',
         'footer-copyright-full': '© {{year}} Swiss Aid Connect Foundation • Tutti i diritti riservati.'
     }
-};
+
 
 
 
 
   
-    // Swahili (Kiswahili)
+   
     'sw': {
         // HEADER/NAV
         'join-nav': 'Mfumo',
