--- a/index8.html
+++ b/index8.html
@@ -1353,9 +1353,7 @@ footer.site-footer{
 <body>
 <!-- Top Utility Nav -->
 <div class="top-nav">
-   <a href="#" data-key="join-nav">Portal</a>
  
-  
   <div class="lang-dropdown">
     <a href="#" id="langToggle" data-lang="en">EN ▾</a>
 
@@ -1364,7 +1362,8 @@ footer.site-footer{
         <a href="#" data-lang-select="fr">French</a>
         <a href="#" data-lang-select="de">German</a>
         <a href="#" data-lang-select="es">Spanish</a>
-       <a href="#" data-mobile-lang="it">Español</a>
+      <a href="#" data-lang-select="de">Español</a>
+        <a href="#"  data-lang-select="it">Italian</a>
         <a href="#" data-lang-select="sw">Swahili</a>
     </div>
 </div>
