--- a/index8.html
+++ b/index8.html
@@ -2207,7 +2207,7 @@ const translations = {
     // French
     'fr': {
         // HEADER/NAV
-        'join-nav': 'Portail',
+        'join-nav': 'French',
         'org-line1': 'Swiss Aid Connect',
         'org-line2': 'Fondation',
         'join-btn': 'Adhérer',
