--- a/index8.html
+++ b/index8.html
@@ -1359,12 +1359,11 @@ footer.site-footer{
 
     <div class="lang-menu" id="langMenu">
         <a href="#" data-lang-select="en">English</a>
-        <a href="#" data-lang-select="fr">French</a>
-        <a href="#" data-lang-select="de">German</a>
-        <a href="#" data-lang-select="es">Spanish</a>
-      <a href="#" data-lang-select="de">Español</a>
-        <a href="#"  data-lang-select="it">Italian</a>
-        <a href="#" data-lang-select="sw">Swahili</a>
+        <a href="#" data-lang-select="fr">Français</a>
+        <a href="#" data-lang-select="de">Deutsch</a>
+      <a href="#" data-lang-select="es">Español</a>
+        <a href="#"  data-lang-select="it">Italiano</a>
+        <a href="#" data-lang-select="sw">KiSwahili</a>
     </div>
 </div>
 
@@ -2003,7 +2002,7 @@ btnMenu.addEventListener('click', () => {
                     <a href="#" data-mobile-lang="fr">Français</a>
                     <a href="#" data-mobile-lang="de">Deutsch</a>
                     <a href="#" data-mobile-lang="es">Español</a>
-                     <a href="#" data-mobile-lang="it">Italian</a>
+                     <a href="#" data-mobile-lang="it">Italiano</a>
                     <a href="#" data-mobile-lang="sw">Kiswahili</a>
                     
                 </div>
