--- a/index8.html
+++ b/index8.html
@@ -1601,7 +1601,7 @@ footer.site-footer{
 
       <!-- Facebook -->
       <div style="text-align:center;">
-        <a href="#" target="_blank">
+        <a href="https://www.facebook.com/share/1AJnqAQzG4/" target="_blank">
           <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" width="55">
         </a>
         <p style="font-size:13px;color:#333;margin-top:10px;">Swiss Aid Connect<br>Foundation</p>
@@ -1609,7 +1609,7 @@ footer.site-footer{
 
       <!-- Instagram -->
       <div style="text-align:center;">
-        <a href="" target="_blank">
+        <a href="https://www.instagram.com/swissaidconnectfoundation?igsh=bDRqODRmamVvcjBv&utm_source=ig_contact_invite" target="_blank">
           <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" width="55">
         </a>
         <p style="font-size:13px;color:#333;margin-top:10px;">Swiss Aid Connect<br>Foundation</p>
