--- a/index8.html
+++ b/index8.html
@@ -1661,7 +1661,7 @@ footer.site-footer{
     <!-- ========================= -->
     <div class="about-block alt-left bg-blue">
       <div class="about-img circle">
-        <img src="https://images.unsplash.com/photo-1529333166437-7750a6dd5a70?w=800" alt="">
+        <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1766162294/ChatGPT_Image_Dec_19_2025_07_11_53_PM_dgiioi.png" alt="">
       </div>
       <div class="about-text">
         <h3>Who We Are</h3>
@@ -1697,7 +1697,7 @@ footer.site-footer{
     <!-- ========================= -->
     <div class="about-block alt-left bg-whitecard">
       <div class="about-img round-diamond">
-        <img src="https://images.unsplash.com/photo-1526256262350-7da7584cf5eb?w=800" alt="">
+        <img src="https://images.pexels.com/photos/33127835/pexels-photo-33127835.jpeg" alt="">
       </div>
       <div class="about-text">
         <h3>Our Vision</h3>
@@ -1727,7 +1727,8 @@ footer.site-footer{
       </div>
 
       <div class="about-img blob">
-        <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?w=800" alt="">
+        <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1766162316/ChatGPT_Image_Dec_19_2025_07_30_27_PM_mkcwvo.png" alt="">
+        
       </div>
     </div>
 
