--- a/edu.html
+++ b/edu.html
@@ -132,7 +132,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
             <li>Skill development in ICT, entrepreneurship, and STEM</li>
         </ul>
     </div>
-    <img src="https://cdn.pixabay.com/photo/2018/02/07/18/30/group-3137670_960_720.jpg" class="shape-rounded" alt="Why Hybrid Learning">
+    <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1766164104/ChatGPT_Image_Dec_19_2025_08_07_57_PM_usfrdk.png" class="shape-rounded" alt="Why Hybrid Learning">
 
 
    
