--- a/youth.html
+++ b/youth.html
@@ -122,7 +122,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
         <h2>Mentorship & Leadership Development</h2>
         <p>Youth mentorship programs provide guidance and leadership training in Nairobi (Kibera youth hubs), Muranga (Kandara community projects), and Kiambu (Thika & Ruiru youth councils). These programs address civic responsibility, drug abuse prevention, and youth-led advocacy initiatives.</p>
     </div>
-    <img src="https://cdn.pixabay.com/photo/2015/11/23/03/36/medical-emergency-1057706_1280.jpg" class="shape-rounded">
+    <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1766165018/ChatGPT_Image_Dec_19_2025_08_22_39_PM_xnkubz.png" class="shape-rounded">
 </section>
 
 <!-- 3. Life Skills & Education -->
