--- a/health.html
+++ b/health.html
@@ -131,7 +131,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
             <li><strong>Mombasa:</strong> Mombasa County Referral Hospital, Port Reitz District Hospital, Likoni Sub-County Hospital.</li>
         </ul>
     </div>
-    <img src="https://cdn.pixabay.com/photo/2015/11/23/03/36/medical-emergency-1057706_1280.jpg" class="shape-rounded">
+    <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1766165468/ChatGPT_Image_Dec_19_2025_08_30_01_PM_g6sf8k.png" class="shape-rounded">
 </section>
 
 <!-- 3. Maternal & Child Health -->
