--- a/youth.html
+++ b/youth.html
@@ -113,7 +113,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
         <h2>Overview of Youth Empowerment</h2>
         <p>Our programs focus on actionable youth initiatives, mentorship, leadership, life skills, civic engagement, and education. We aim to equip young people in Nairobi, Muranga, Kiambu, Nakuru, Machakos, and Mombasa with the tools to thrive socially, economically, and digitally.</p>
     </div>
-    <img src="https://cdn.pixabay.com/photo/2025/10/15/04/31/mahonia-9895458_640.jpg" class="shape-round">
+    <img src="https://images.pexels.com/photos/14429344/pexels-photo-14429344.jpeg" class="shape-round">
 </section>
 
 <!-- 2. Mentorship & Leadership -->
@@ -127,7 +127,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 
 <!-- 3. Life Skills & Education -->
 <section class="section center-section">
-    <img src="https://cdn.pixabay.com/photo/2016/11/14/03/16/book-1822474_640.jpg" class="shape-diagonal">
+    <img src="https://images.pexels.com/photos/5675818/pexels-photo-5675818.jpeg" class="shape-diagonal">
     <div class="text">
         <h2>Life Skills & Education</h2>
         <p>We offer programs on decision-making, problem-solving, civic engagement, STEM initiatives, vocational training, and internships. County-specific programs include Nakuru (Njoro youth sports & arts), Machakos (coding clubs & civic leadership), and Mombasa (Likoni & Kisauni volunteer projects).</p>
@@ -136,7 +136,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 
 <!-- 4. Entrepreneurship & Economic Opportunities -->
 <section class="section">
-    <img src="https://cdn.pixabay.com/photo/2020/03/03/04/52/pill-4897529_640.jpg" class="shape-hexagon">
+    <img src="https://pixabay.com/images/download/x-8342931_1920.jpg" class="shape-hexagon">
     <div class="text">
         <h2>Entrepreneurship & Economic Opportunities</h2>
         <p>Youth business incubation, microfinance, and entrepreneurship programs are implemented in Kiambu, Mombasa, and Nairobi. These initiatives include mentorship, start-up support, and access to local markets, empowering youth to develop sustainable income streams.</p>
