--- a/youth.html
+++ b/youth.html
@@ -136,7 +136,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 
 <!-- 4. Entrepreneurship & Economic Opportunities -->
 <section class="section">
-    <img src="https://pixabay.com/images/download/x-8342931_1920.jpg" class="shape-hexagon">
+    <img src="https://images.pexels.com/photos/9431450/pexels-photo-9431450.jpeg" class="shape-hexagon">
     <div class="text">
         <h2>Entrepreneurship & Economic Opportunities</h2>
         <p>Youth business incubation, microfinance, and entrepreneurship programs are implemented in Kiambu, Mombasa, and Nairobi. These initiatives include mentorship, start-up support, and access to local markets, empowering youth to develop sustainable income streams.</p>
@@ -158,7 +158,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
         <h2>Digital Inclusion & Innovation</h2>
         <p>ICT, coding, robotics, and digital literacy programs are active across all six counties. Youth gain access to technology hubs, mentorship, and online platforms, ensuring inclusion of youth with disabilities while promoting innovation, collaboration, and employability.</p>
     </div>
-    <img src="https://cdn.pixabay.com/photo/2016/11/14/03/16/book-1822474_640.jpg" class="shape-diagonal">
+    <img src="https://images.pexels.com/photos/6238130/pexels-photo-6238130.jpeg" class="shape-diagonal">
 </section>
 
 <a href="https://webs-star.github.io/swissaid/" target="_blank" aria-label="Home">
