--- a/youth.html
+++ b/youth.html
@@ -149,7 +149,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
         <h2>Sports, Arts & Civic Engagement</h2>
         <p>Youth participate in county-specific sports leagues, music, art, and volunteerism programs. Nairobi and Nakuru host competitive leagues and creative arts events; Machakos and Muranga focus on civic projects and leadership; Mombasa promotes entrepreneurship and community service; Kiambu encourages innovation challenges.</p>
     </div>
-    <img src="https://cdn.pixabay.com/photo/2013/12/06/10/21/disability-224130_640.jpg" class="shape-leaf">
+    <img src="https://images.pexels.com/photos/9287491/pexels-photo-9287491.jpeg" class="shape-leaf">
 </section>
 
 <!-- 6. Digital Inclusion & Innovation -->
