--- a/health.html
+++ b/health.html
@@ -136,7 +136,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 
 <!-- 3. Maternal & Child Health -->
 <section class="section">
-    <img src="https://cdn.pixabay.com/photo/2016/11/14/03/16/book-1822474_640.jpg" class="shape-diagonal">
+    <img src="https://images.pexels.com/photos/11612437/pexels-photo-11612437.jpeg" class="shape-diagonal">
     <div class="text">
         <h2>Maternal and Child Health</h2>
         <p>We provide specialized programs for maternal care, early childhood development, nutrition, and immunization. Through partnerships with local hospitals and health centers, we ensure healthier mothers and children in Nairobi, Murang’a, Kiambu, Nakuru, Machakos, and Mombasa.</p>
@@ -145,7 +145,7 @@ footer{ background:#222; color:#eee; padding:30px; text-align:center; margin-top
 
 <!-- 4. Mental Wellness & Education -->
 <section class="section">
-    <img src="https://cdn.pixabay.com/photo/2020/03/03/04/52/pill-4897529_640.jpg" class="shape-hexagon">
+    <img src="https://images.pexels.com/photos/33132346/pexels-photo-33132346.jpeg" class="shape-hexagon">
     <div class="text">
         <h2>Mental Health & Wellness</h2>
         <p>Our initiatives promote mental wellness through awareness, counseling, community support, and training programs. We collaborate with health facilities across all counties to reduce stigma and support holistic health in society.</p>
